Webpack is working

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "compile:sass": "node-sass sass/main.scss css/style.css -w",
-    "build":"webpack"
+    "build":"webpack -w"
   },
   "author": "William Brace",
   "license": "ISC",
